--- a/templates/recruitments/base.html
+++ b/templates/recruitments/base.html
@@ -9,6 +9,7 @@
 {% endblock title %}
 {% block breadcrumbs %}
     {{ block.super }}
+    {% breadcrumb "企画" "events:" %}
     {% breadcrumb "出欠掲示板" "recruitment:" %}
 {% endblock breadcrumbs %}
 {% block content %}
