出欠掲示板へのリンクを追加

--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -26,5 +26,11 @@
                 <div>学校</div>
             </a>
         </div>
+        <div class="col-sm-6">
+            <a href="{% url 'recruitment:' %}"
+               class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
+                <div>出欠掲示板</div>
+            </a>
+        </div>
     </div>
 {% endblock content %}
