企画一覧にページネーション・検索機能を実装

--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -13,9 +13,15 @@
     {% breadcrumb "すべての企画" "events:event_list_all" %}
 {% endblock breadcrumbs %}
 {% block content %}
+
+    {% include 'components/searchform.html' %}
+
     {% for event in object_list %}
 
         {% include 'events/event_list_component.html' %}
 
     {% endfor %}
+
+    {% include 'components/pagination.html' %}
+
 {% endblock content %}
