--- a/templates/components/searchform.html
+++ b/templates/components/searchform.html
@@ -1,14 +1,14 @@
+{% load django_bootstrap5 %}
+
 <form action=""
       method="get">
-    <div class="input-group mb-3">
-        <input type="search"
-               class="form-control"
-               placeholder="キーワードを入力"
-               aria-label="検索ワード"
-               value="{{ request.GET.search }}"
-               name="search"/>
-        <button class="btn btn-primary"
-                type="submit"
-                id="btn-search">検索</button>
-    </div>
+  <div class="input-group mb-3">
+    <input type="search"
+           class="form-control"
+           placeholder="キーワードを入力"
+           aria-label="検索ワード"
+           value="{{ request.GET.search }}"
+           name="search"/>
+    {% bootstrap_button "検索" button_class="btn-primary" button_type="submit" id="btn-search" %}
+  </div>
 </form>
