--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -13,7 +13,7 @@
         });
     </script>
     <link rel="stylesheet"
-          href="{% static 'utils/css/tablesorter.css' %}">
+          href="{% static 'utils/css/tablesorter.css' %}"/>
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
