出欠掲示板から打診できるように

--- a/templates/recruitments/list_component.html
+++ b/templates/recruitments/list_component.html
@@ -15,8 +15,8 @@
     {% if is_admin %}
         <td class="text-center">
             <input type="checkbox"
-                   name="mid"
-                   class="form-check-input"
+                   name="participants"
+                   class="form-check-input invite"
                    value="{{ application.member.id }}"
                    {% if application.member.id|stringformat:"s" in request.GET|get_list:"mid" %}checked{% endif %}/>
         </td>
