--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -49,7 +49,9 @@
             </li>
         {% endfor %}
     </ul>
-    <form method="get">
+    <form method="get"
+          id="form">
+        {% csrf_token %}
         <div class="tab-content">
             {% for option in options %}
                 <div class="tab-pane fade show
@@ -91,21 +93,46 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="form-check">
-            <label class="form-check-label">
-                <input class="form-check-input"
-                       type="checkbox"
-                       name="temp"
-                       checked/>
-                仮登録
-            </label>
-        </div>
-        <div class="form-text">
-            <ul>
-                <li>正式に打診する場合はチェックを外してください。</li>
-                <li>正式な打診前に他のメンバーに打診候補を共有したい場合はチェックしてください。</li>
-            </ul>
-        </div>
+        {% if is_admin %}
+            <div class="form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input"
+                           type="checkbox"
+                           name="temp"
+                           value="true"
+                           checked/>
+                    仮登録
+                </label>
+            </div>
+            <div class="form-text">
+                <ul>
+                    <li>正式に打診する場合はチェックを外してください。</li>
+                    <li>正式な打診前に他のメンバーに打診候補を共有するなどしたい場合はチェックしてください。</li>
+                </ul>
+            </div>
+        {% endif %}
         {% bootstrap_button "登録" button_class="btn-primary" btn_type="submit" %}
     </form>
+    {% if is_admin %}
+        <script>
+        const form = document.getElementById("form");
+
+        form.addEventListener("submit", ()=> {
+            const temp = document.getElementsByName("temp")[0];
+            const csrfmiddlewaretoken = document.getElementsByName("csrfmiddlewaretoken")[0];
+            const inviteCheckbox = document.getElementsByClassName("invite");
+            if (temp.checked) { // 仮登録
+                csrfmiddlewaretoken.disabled = true;
+                for (let i = 0; i < inviteCheckbox.length; i++) {
+                    inviteCheckbox[i].setAttribute("name", "mid");
+                }
+                temp.disabled = true;
+            } else { // 本登録
+                csrfmiddlewaretoken.disabled = false;
+                form.action = "{% url 'events:event_invite' event.id %}";
+                form.method = "post";
+            }
+        });
+        </script>
+    {% endif %}
 {% endblock content %}
