--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -17,7 +17,8 @@
 {% endblock head %}
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "出欠一覧" "recruitment:recruitment_list" %}
+    {% breadcrumb event.name "events:event_detail" event.pk %}
+    {% breadcrumb "出欠一覧" "events:recruitment_list" %}
 {% endblock breadcrumbs %}
 {% block content %}
     <h5>{{ event.name }}</h5>
