--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="col-sm-6">
-            <a href="{% url 'recruitment:' %}"
+            <a href="{% url 'events:recruitment' %}"
                class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
                 <div>出欠掲示板</div>
             </a>
