--- a/templates/events/participants.html
+++ b/templates/events/participants.html
@@ -26,6 +26,7 @@
     {% breadcrumb "参加者" "events:event_participation" %}
 {% endblock breadcrumbs %}
 {% block content %}
+    <h4>{{ event.name }}</h4>
     <!--参加者-->
     <div class="card border mt-4">
         <div class="card-header border-bottom d-flex align-items-center">
