--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -55,7 +55,7 @@
         {% csrf_token %}
         <div class="tab-content">
             {% for option in options %}
-                <div class="tab-pane fade show
+                <div class="tab-pane show
                             {% if forloop.first %}
                                 active
                             {% endif %}"
