--- a/templates/recruitments/list.html
+++ b/templates/recruitments/list.html
@@ -21,7 +21,7 @@
     {% breadcrumb "出欠一覧" "events:recruitment_list" %}
 {% endblock breadcrumbs %}
 {% block content %}
-    <h4>{{ event.name }}</h4>
+    <h1 class="fs-4">{{ event.name }}</h1>
     <ul>
         <li>
             ◎は○のタブで<b>太字</b>で表示されます。
