表記を変更

--- a/templates/events/cancel_invitation.html
+++ b/templates/events/cancel_invitation.html
@@ -10,7 +10,7 @@
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb object.event "events:event_detail" object.event.id %}
-    {% breadcrumb "打診取り消し" "events:event_cancel_invitation" %}
+    {% breadcrumb "打診取消" "events:event_cancel_invitation" %}
 {% endblock breadcrumbs %}
 {% block content %}
     <div class="mb-3">
